--- a/templates/base.html
+++ b/templates/base.html
@@ -30,15 +30,35 @@
     <link href="{% static 'styles/detail-page.css' %}" rel="stylesheet">
     <link href="{% static 'styles/help.css' %}" rel="stylesheet">
     <link href="{% static 'vendor/styles/app.css' %}" rel="stylesheet">
-    
+    <link href="{% static 'styles/submit.css' %}" rel="stylesheet">
+    <!-- <link href="{% static 'styles/vendor/styles/admin.css' %}" rel="stylesheet"> -->
+
     <!-- YOUR CUSTOM CSS -->
     <link href="{% static 'styles/custom.css' %}" rel="stylesheet">
 
     <!-- <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet"> -->
+    <script src="{% static 'scripts/jquery-3.6.4.min.js' %}"></script>
     <script src="https://kit.fontawesome.com/04413a34db.js" crossorigin="anonymous"></script>
-    <script src="https://maps.googleapis.com/maps/api/js?key={{GOOGLE_API_KEY}}&libraries=places&callback=initAutocomplete" async defer></script>
+    {% if '/profile/' in request.GET %}
+        <script src="https://maps.googleapis.com/maps/api/js?key={{GOOGLE_API_KEY}}&libraries=places&callback=initAutocomplete" async defer></script>
+    {% endif %}
+    <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
     <script src="{% static 'scripts/custom.js' %}"></script>
 
+    <!-- COMMON SCRIPTS -->
+    <!-- <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBDyCxHyc8z9gMA5IlipXpt0c33Ajzqix4"></script> -->
+    <!-- <script src="https://cdn.rawgit.com/googlemaps/v3-utility-library/master/infobox/src/infobox.js"></script> -->
+
+    <script src="{% static 'scripts/common_scripts.min.js' %}"></script>
+    <script src="{% static 'scripts/common_func.js' %}"></script>
+    <script src="{% static 'scripts/validate.js' %}"></script>
+
+    <!-- SPECIFIC SCRIPTS -->
+    <script src="{% static 'scripts/sticky_sidebar.min.js' %}"></script>
+    <script src="{% static 'scripts/specific_detail.min.js' %}"></script>
+    <script src="{% static 'scripts/datepicker.min.js' %}"></script>
+    <script src="{% static 'scripts/datepicker_func_1.js' %}"></script>
+    <script src="{% static 'scripts/app.js' %}"></script>
 </head>
 
 <body>
@@ -61,20 +81,7 @@
 	
 <div class="layer"></div><!-- Opacity Mask Menu Mobile -->
 
-<!-- COMMON SCRIPTS -->
-<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBDyCxHyc8z9gMA5IlipXpt0c33Ajzqix4"></script>
-<script src="https://cdn.rawgit.com/googlemaps/v3-utility-library/master/infobox/src/infobox.js"></script>
-<script src="{% static 'scripts/app.js' %}"></script>
 
-<script src="{% static 'scripts/common_scripts.min.js' %}"></script>
-<script src="{% static 'scripts/common_func.js' %}"></script>
-<script src="{% static 'scripts/validate.js' %}"></script>
-
-<!-- SPECIFIC SCRIPTS -->
-<script src="{% static 'scripts/sticky_sidebar.min.js' %}"></script>
-<script src="{% static 'scripts/specific_detail.min.js' %}"></script>
-<script src="{% static 'scripts/datepicker.min.js' %}"></script>
-<script src="{% static 'scripts/datepicker_func_1.js' %}"></script>
 
 </body>
 </html>
