--- a/templates/marketplace/cart.html
+++ b/templates/marketplace/cart.html
@@ -1,5 +1,6 @@
 {% extends 'base.html' %}
 {% load static %}
+{% load humanize %}
 
 {% block content%}
 <div class="container">
@@ -28,12 +29,12 @@
                                                 <li class="list-group-item align-items-center">
                                                     <a href="#" class="decrease_cart" data-id="{{ item.product.id }}" id="{{item.id}}" data-url="{% url 'decrease_cart' item.product.id %}" style="margin-right: 10px;"><i class="fa fa-circle-minus fa-xl"></i></a>
                                                     
-                                                    <label id="qty-{{item.product.id}}" style="margin-right: 12px;">0</label>
+                                                    <label id="qty-{{item.product.id}}" style="margin-right: 12px;">{{item.quantity}}</label>
                                                     
                                                     <a href="#" class="add_to_cart" data-id="{{ item.product.id }}" data-url="{% url 'add_to_cart' item.product.id %}" style="margin-right: 10px;"><i class="fa fa-circle-plus fa-xl"></i></a>
                                                     <a href="#" class="delete_cart" data-id="{{ item.id }}" data-url="{% url 'delete_cart' item.id %}" title="Delete this item"><i class="fa fa-trash fa-xl text-danger"></i></a>
                                                 </li>
-                                            </ul>
+                                            </ul>                 
                                         </div>
                                     </div>
                                     <p class="fw-bold mb-0 me-5 pe-3">{{item.product.price}} {{item.product.price_description}}</p>
@@ -51,11 +52,11 @@
 
                     <div class="d-flex justify-content-between px-x">
                         <p class="fw-bold">Discount:</p>
-                        <p class="fw-bold currency" id="discount">$0</p>
+                        <p class="fw-bold currency" id="discount">{{discount|floatformat:2}}</p>
                     </div>
-                    <div class="d-flex justify-content-between p-2 mb-2" style="background-color: #eeeeee;">
+                    <div class="d-flex justify-content-between p-2 mb-2 float-right" style="background-color: #eeeeee;">
                         <h5 class="fw-bold mb-0">Total:</h5>
-                        <h5 class="fw-bold mb-0 currency" id="total">$0</h5>
+                        <h5 class="currency" id="total">${{total|floatformat:2}}</h5>                      
                     </div>               
                 </div>
                 <div class="col-lg-6 px-5">
