--- a/templates/base.html
+++ b/templates/base.html
@@ -39,7 +39,7 @@
     <!-- <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet"> -->
     <script src="{% static 'scripts/jquery-3.6.4.min.js' %}"></script>
     <script src="https://kit.fontawesome.com/04413a34db.js" crossorigin="anonymous"></script>
-    {% if '/profile/' in request.GET %}
+    {% if '/profile/' in request.path %}
         <script src="https://maps.googleapis.com/maps/api/js?key={{GOOGLE_API_KEY}}&libraries=places&callback=initAutocomplete" async defer></script>
     {% endif %}
     <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
