--- a/templates/home.html
+++ b/templates/home.html
@@ -11,27 +11,24 @@
                         <h1>Find a Professional</h1>
                         <p>Book a Consultation by Appointment, Chat or Video call</p>
                         <form action="{% url 'search' %}" method="get">
-                            <div class="row g-0 custom-search-input">
-                                <div class="col-md-5">
-                                    <div class="form-group">
-                                        <input class="form-control" type="text" name="vendor_name" placeholder="Find a professional...">
-                                    </div>
+                            <div class="row custom-search-input">
+                                <div class="form-group col-md-8">
+                                    <input class="form-control" type="text" name="vendor_name" placeholder="Find a professional...">
                                 </div>
-                                <div class="col-md-5">
-                                    <div class="form-group">
-                                        <select class="form-control" name="radius" id="radius" placeholder="Radius" style="height: 50px; padding-right:10px;" required>
-                                            <option value="" selected>Choose Radius</option>
-                                            <option value="5">5 miles</option>
-                                            <option value="10">10 miles</option>
-                                            <option value="15">15 miles</option>
-                                            <option value="25">25 miles</option>
-                                            <option value="50">50 miles</option>
-                                            <option value="100">100 miles</option>
-                                        </select>
-                                    </div>
+                                <div class="form-group col-md-2 pt-1 mr-5">
+                                    <select class="form-control" id="inlineFormCustomSelect" name="radius" placeholder="Radius" style="padding-right:10px; margin-left: -5px;" required>
+                                       <option selected>Choose Radius</option>
+                                        <option value="5">5 miles</option>
+                                        <option value="10">10 miles</option>
+                                        <option value="15">15 miles</option>
+                                        <option value="25">25 miles</option>
+                                        <option value="50">50 miles</option>
+                                        <option value="100">100 miles</option>
+                                      </select>
                                 </div>
-                                <div class="col-md-2">
-                                    <input type="submit" value="Find">
+
+                                <div class="col-md-2 ml-3 pull-right">
+                                    <input type="submit" value="Find" >
                                 </div>
                             </div>
                             <!-- /row -->
